Opened 19 years ago

Closed 16 years ago

#507 closed bug (fixed)

[VLC] slider flickering

Reported by: diver Owned by: stippi
Priority: normal Milestone: R1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description (last modified by modeenf)

Open any file in vlc and that press stop. Now look at slider, it will flicker twice in a second.

Change History (10)

comment:1 by diver, 19 years ago

Also note that slider color is different in R5. (don't want to create sepatate bug for such small thing :-) )

comment:2 by jackburton, 19 years ago

Our BSlider doesn't use an offscreen bitmap to draw itself, might be the cause of this problem.

comment:3 by stippi, 19 years ago

No, he means the seeking slider, which was written from scratch (by me :-). VLC checks the playback status on pulse. I think twice in a second. I don't know what's causing the flickering but I can have a look.

comment:4 by stippi, 19 years ago

Status: newassigned

comment:5 by axeld, 19 years ago

Owner: changed from axeld to stippi

comment:6 by axeld, 19 years ago

Status: assignednew

comment:7 by scottmc, 17 years ago

Platform: All

Does this still happen for anyone? I tried to see it but maybe I'm not doing it right?

comment:8 by diver, 17 years ago

Component: - GeneralServers/app_server

BTW, MediaPlayer's seeking slider have the same issue.

comment:9 by diver, 16 years ago

Version: R1 development

I can't reproduce it in VirtualBox 3.0.4

comment:10 by modeenf, 16 years ago

Description: modified (diff)
Resolution: fixed
Status: newclosed

Can't reproduce it on real hardware ether, so I'll close it.

Note: See TracTickets for help on using tickets.