remote: keep tiled bitmap draws whole so the client can recover the phase (#507)

A B_TILE_BITMAP draw has a phase: the tile grid origin is the view
rect's top-left and the source phase is carried in bitmapRect's offset
(BView::DrawTiledBitmapAsync passes bitmap->Bounds().OffsetToCopy(phase)).

RemoteDrawingEngine::DrawBitmap took the RP_DRAW_BITMAP_RECTS path for a
clipped draw, and _ExtractBitmapRegions re-extracts each clip rect as an
independent scaled blit from that rect's own origin. That discards the
tile phase: a client handed several rects cannot know where the tile grid
starts, so the pattern shifts at every rect boundary and the clipped tiled
draw is unreconstructable. The constrain-to-bounds and crop/rebase fixups
on the fast path likewise assume a scaled blit and rewrite bitmapRect.

Route a tiled draw off all of that: emit a single whole-bitmap
RP_DRAW_BITMAP carrying the unclipped view rect, bitmapRect (phase) and
the options word intact, and let the client clip against the clipping
region it already tracks (RP_CONSTRAIN_CLIPPING_REGION). No wire change
and no capability gate -- the unclipped tiled path already uses exactly
this message and every existing client renders it correctly; a tiled
source bitmap is small by construction, so shipping it whole costs little,
which is where the RECTS bandwidth argument is weakest anyway.

Builds clean (jam -q app_server). Seam-continuity verified offline against
a wire-shape model with a mutation arm; the pixel-level on-hardware
round-trip is owed once #513 (this branch's base) lands.